--- a/app/views/hearings/pages/partiyrequirements.html
+++ b/app/views/hearings/pages/partiyrequirements.html
@@ -7,6 +7,7 @@ Case details
 
 {% block content %}
 
+<div style="display:none;" name="appellantName"></div>
 
 <main class="" id="main-content" role="main">
     <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
@@ -41,7 +42,7 @@ Case details
 
                     <p  class="govuk-body"> These requirements have already been selected:</p>
 
-                    <table class="govuk-table">
+                    <table class="govuk-table" style="width:75%;">
                         <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
                             <th scope="col" class="govuk-table__header">Party</th>
