HTML h2 fix on check answers page (was missing closing tag)

--- a/app/views/hearings/pages/checkyouranswers.html
+++ b/app/views/hearings/pages/checkyouranswers.html
@@ -10,7 +10,7 @@ Case details
 
     <main class="" id="main-content" role="main">
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
-            <h2 class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
+            <h2 class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;"></h2>
 
                 <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
