--- a/app/views/workallocation/pages/wa-show-work-filter-no-location-found-filter-close.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-no-location-found-filter-close.html
@@ -19,7 +19,7 @@ My work
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">Error</span>
-    Location not found. Please select a location.
+    Select a location
   </div>
 </div>
 
