--- a/app/views/workallocation/pages/test.html
+++ b/app/views/workallocation/pages/test.html
@@ -16,6 +16,160 @@ My work
   </div>
   <p>Access tasks and cases.</p>
 
+  <div class="hmcts-filter">
+
+<div class="hmcts-filter__header">
+
+<div class="hmcts-filter__header-title">
+  <h2 class="govuk-heading-m">Filter</h2>
+</div>
+
+<div class="hmcts-filter__header-action">
+
+</div>
+
+</div>
+
+<div class="hmcts-filter__content">
+
+<div class="hmcts-filter__selected">
+
+  <div class="hmcts-filter__selected-heading">
+
+    <div class="hmcts-filter__heading-title">
+      <h2 class="govuk-heading-m">Selected filters</h2>
+    </div>
+
+    <div class="hmcts-filter__heading-action">
+      <p><a class="govuk-link govuk-link--no-visited-state" href="">Clear filters</a></p>
+    </div>
+
+  </div>
+
+  <h3 class="govuk-heading-s govuk-!-margin-bottom-0">Type</h3>
+
+  <ul class="hmcts-filter-tags">
+
+    <li><a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span> Divorce</a></li>
+
+    <li><a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span> Financial remedy</a></li>
+
+  </ul>
+
+  <h3 class="govuk-heading-s govuk-!-margin-bottom-0">Status</h3>
+
+  <ul class="hmcts-filter-tags">
+
+    <li><a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span> Application drafted</a></li>
+
+  </ul>
+
+</div>
+
+<div class="hmcts-filter__options">
+
+  <button class="govuk-button" data-module="govuk-button">
+    Apply filters
+  </button>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label govuk-label--m" for="keywords">
+      Keywords
+    </label>
+
+    <input class="govuk-input" id="keywords" name="keywords" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+
+    <fieldset class="govuk-fieldset">
+
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+
+        Type
+
+      </legend>
+
+      <div class="govuk-checkboxes govuk-checkboxes--small">
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="type" name="type" type="checkbox" value="1" checked>
+          <label class="govuk-label govuk-checkboxes__label" for="type">
+            Divorce (18)
+          </label>
+
+        </div>
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="2" checked>
+          <label class="govuk-label govuk-checkboxes__label" for="type-2">
+            Financial Remedy (5)
+          </label>
+
+        </div>
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="type-3" name="type" type="checkbox" value="3">
+          <label class="govuk-label govuk-checkboxes__label" for="type-3">
+            Probate (2)
+          </label>
+
+        </div>
+
+      </div>
+
+    </fieldset>
+
+  </div>
+
+  <div class="govuk-form-group">
+
+    <fieldset class="govuk-fieldset">
+
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+
+        Status
+
+      </legend>
+
+      <div class="govuk-checkboxes govuk-checkboxes--small">
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="status" name="status" type="checkbox" value="1" checked>
+          <label class="govuk-label govuk-checkboxes__label" for="status">
+            Application drafted
+          </label>
+
+        </div>
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="status-2" name="status" type="checkbox" value="2">
+          <label class="govuk-label govuk-checkboxes__label" for="status-2">
+            Awaiting payment
+          </label>
+
+        </div>
+
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="status-3" name="status" type="checkbox" value="magistrate">
+          <label class="govuk-label govuk-checkboxes__label" for="status-3">
+            Petition paid
+          </label>
+
+        </div>
+
+      </div>
+
+    </fieldset>
+
+  </div>
+
+</div>
+
+</div>
+
+</div> 
+
   {{ govukButton({
     text: "Hide work filter",
     classes: "govuk-button--secondary",
@@ -24,17 +178,37 @@ My work
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half"
         style="background-color: #f3f2f1; padding:20px 20px 0px 20px; margin-left: 15px;">
-        <h2 class="govuk-heading-m">Immigration and Asylum</h2>
-        <hr>
-        <h3 class="govuk-heading-s">Selected filter</h3>
-        <table class="govuk-table">
-          <tbody class="govuk-table__body">
-            <tr class="govuk-table__row" style="vertical-align:top; background-color:#f3f2f1;">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width:50%;">Taylor House <br><a href="#" class="right_m">Remove</a></td>
-            </tr>
-          </tbody>
-        </table>
-        <h3 class="govuk-heading-s">Your selected types of work</h3>
+        <h2 class="govuk-heading-m">Services</h2>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
+            <div class="govuk-checkboxes govuk-checkboxes--large">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" checked >
+                <label class="govuk-label govuk-checkboxes__label" for="organisation">
+                  Immigration and Asylum
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="organisation-2" name="organisation" type="checkbox" value="employment-tribunal">
+                <label class="govuk-label govuk-checkboxes__label" for="organisation-2">
+                  Damages
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="organisation-2" name="organisation" type="checkbox" value="employment-tribunal">
+                <label class="govuk-label govuk-checkboxes__label" for="organisation-2">
+                  Social security and child support
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="govuk-grid-column-one-quarter">
+            <p></p>
+          </div>
+          <div class="govuk-grid-column-one-quarter">
+            <p></p>
+          </div>
+        </div>
         <hr>
         <h3 class="govuk-heading-s">Filter by location</h3>
         <div style="width:90%; padding:0 0 20px 0;">
@@ -51,15 +225,14 @@ My work
             <option value="Taylor House Tribunal Hearing Centre" {% if data.locationPicker == 'Taylor House Tribunal Hearing Centre' %} selected {% endif %}>Taylor House Tribunal Hearing Centre</option>
           </select>
         </div>
-        <!-- <table class="govuk-table">
+        <table class="govuk-table">
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row" style="vertical-align:top; background-color:#f3f2f1;">
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width:50%;">Taylor House <br><a href="#" class="right_m">Remove</a></td>
             </tr>
           </tbody>
-        </table> -->
-        <hr>
-        <h3 class="govuk-heading-s">Types of works</h3>
+        </table>
+        <h3 class="govuk-heading-s">Types of work</h3>
         <p class="govuk-body">Show tasks for the selected type of works:</p>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
@@ -73,7 +246,7 @@ My work
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="organisation-2" name="organisation" type="checkbox" value="employment-tribunal">
                 <label class="govuk-label govuk-checkboxes__label" for="organisation-2">
-                  Applictions
+                  Applications
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
